<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hp.scorekeeperapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TeamProperties"
                    android:text="@string/TeamA" />

                <TextView
                    android:id="@+id/TeamA"
                    style="@style/ScoreAtTheTime"
                    android:text="@string/TheScore" />

                <Button
                    style="@style/ButtonProperties"
                    android:onClick="AddOneForTeamA"
                    android:text="@string/addOne" />

                <Button
                    style="@style/ButtonProperties"
                    android:onClick="AddTwoForTeamA"
                    android:text="@string/addTwo" />

                <Button
                    style="@style/ButtonProperties"
                    android:onClick="AddThreeForTeamA"
                    android:text="@string/addThree" />

                <Button
                    style="@style/ButtonProperties"
                    android:onClick="AddFourForTeamA"
                    android:text="@string/addFour" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/Black" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TeamProperties"
                    android:text="@string/TeamB" />

                <TextView
                    android:id="@+id/TeamB"
                    style="@style/ScoreAtTheTime"
                    android:text="@string/TheScore" />

                <Button
                    style="@style/ButtonProperties"
                    android:onClick="AddOneForTeamB"
                    android:text="@string/addOne" />

                <Button
                    style="@style/ButtonProperties"
                    android:onClick="AddTwoForTeamB"
                    android:text="@string/addTwo" />

                <Button
                    style="@style/ButtonProperties"
                    android:onClick="AddThreeForTeamB"
                    android:text="@string/addThree" />

                <Button
                    style="@style/ButtonProperties"
                    android:onClick="AddFourForTeamB"
                    android:text="@string/addFour" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:onClick="ResetTheScore"
                android:background="#ff9100"
                android:text="@string/Reset" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>
